--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,8 +6,9 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:7.1.3'
+       classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+       classpath 'com.android.tools.build:gradle:7.1.3'
+       classpath 'com.google.gms:google-services:4.4.1'
     }
 }
 
